testsuite/tests/grammar/invalid_lexers/token_action_6.lkt
import common

lexer foo_lexer {
    @text(comment=false) Example <- "example"
}
